--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2>Featured Products</h2>
         <p>Summer Collection New Morden Design</p>
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f1.jpg';">
                 <img src="img/products/f1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -86,7 +86,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f2.jpg';">
                 <img src="img/products/f2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -102,7 +102,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f3.jpg';">
                 <img src="img/products/f3.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -118,7 +118,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f4.jpg';">
                 <img src="img/products/f4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -134,7 +134,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f5.jpg';">
                 <img src="img/products/f5.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -150,7 +150,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f6.jpg';">
                 <img src="img/products/f6.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -166,7 +166,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f7.jpg';">
                 <img src="img/products/f7.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -182,7 +182,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/f8.jpg';">
                 <img src="img/products/f8.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -211,7 +211,7 @@
         <h2>New Arrivals</h2>
         <p>Summer Collection New Morden Design</p>
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n1.jpg';">
                 <img src="img/products/n1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -227,7 +227,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n2.jpg';">
                 <img src="img/products/n2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -243,7 +243,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n3.jpg';">
                 <img src="img/products/n3.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -259,7 +259,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n4.jpg';">
                 <img src="img/products/n4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -275,7 +275,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n5.jpg';">
                 <img src="img/products/n5.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -291,7 +291,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n6.jpg';">
                 <img src="img/products/n6.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -307,7 +307,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n7.jpg';">
                 <img src="img/products/n7.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -323,7 +323,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html?image=img/products/n8.jpg';">
                 <img src="img/products/n8.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
@@ -345,7 +345,7 @@
     <section id="sm-banner" class="section-p1">
         <div class="banner-box">
             <h4>crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
+            <h2>Buy Clothes at amazing prices</h2>
             <span>The best classic dress is on sale at cora</span>
             <button class="white">Learn More</button>
         </div>
