Removed bugs and optimized code

--- a/cart.html
+++ b/cart.html
@@ -49,10 +49,10 @@
                     <td>Subtotal</td>
                 </tr>
             </thead>
-            <tbody id="cart-body">
-            </tbody>
+            <tbody id="cart-body"></tbody>
         </table>
-        <div id="empty-cart-msg" style="display:none; text-align:center; padding: 20px;">
+        
+        <div id="empty-cart-msg" style="display:none; text-align:center; padding: 40px;">
             <h3>Your Cart is Empty</h3>
         </div>
     </section>
